<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView

            android:id="@+id/ambulance_logo"
            android:padding="5dp"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/circle_ambulance"
            android:contentDescription="@string/logo_desc" />

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ambulance_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="Sewa Life"
            android:textColor="#2CA7E0"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/common"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="#2CA7E0" />

        <EditText
            android:id="@+id/user_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_email"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/common"
            android:drawableLeft="@drawable/ic_key"
            android:drawablePadding="10dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="#2CA7E0" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/user_password"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:text="@string/login"
            android:textColor="#fff" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp">

        <Button
            android:id="@+id/login_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/last_button"
            android:fontFamily="sans-serif"
            android:text="@string/sign"
            android:textColor="#2CA7E0"
            android:textSize="15dp"
            android:textAllCaps="true"
            />

        <Button
            android:id="@+id/forgot_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/last_button"
            android:layout_alignParentRight="true"
            android:fontFamily="sans-serif"
            android:text="@string/forgot"
            android:textAllCaps="true"
            android:textColor="#2CA7E0"
            android:textSize="15dp"
            />
    </RelativeLayout>


</RelativeLayout>

